--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
   </body>
 
   <footer>
-    www 🎲 Arun Prasath 🎲 com
+    www <a href="https://www.linkedin.com/in/arunprasathmanickam/" style="color: green;">Arun Prasath com
   </footer>
 </html>
