--- a/index.html
+++ b/index.html
@@ -28,6 +28,5 @@
   </body>
 
   <footer>
-    www <a href="https://www.linkedin.com/in/arunprasathmanickam/" style="color: green;">Arun Prasath com
-  </footer>
+www <a href="https://www.linkedin.com/in/arunprasathmanickam/" style="color: green;">Arun Prasath</a> com  </footer>
 </html>
